			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard

22-Jul-2004
~~~~~~~~~~~
Compatability fixes: /bin/sh behaviour, DPMS, availability of long options
(Stephen Watson).

01-Jul-2004
~~~~~~~~~~~
Message log sizing/positioning code takes Xinerama into account and window is
now a top-level window instead of a dialogue (Tony Houghton).

Provides options for DPMS and keyboard auto-repeat, which can be set via
exteral applications (Tony Houghton).

Added /etc/X11/dm/Sessions to the list of locations where rox.desktop can be
installed (for Mandrake systems).

11-Jun-2004
~~~~~~~~~~~
Bugfix: Setting the keymap to an empty string produced a crash.

05-Jun-2004 (Release 0.1.23)
~~~~~~~~~~~
Added setting to control keymap (Guido Schimmels).

19-May-2004
~~~~~~~~~~~
Bugfix: AutoStart didn't get ROX-Filer from Zero Install (reported by Stuart
	Langridge).

18-May-2004
~~~~~~~~~~~
Added French translation (Sébastien Person).

09-May-2004
~~~~~~~~~~~
Removed window manager chooser from options box. The new way to set the
window manager is by changing an XSetting via D-BUS. A simpler fallback
text entry box is provided for emergencies, and ROX-Session will try to
pick a default window manager automatically in all cases now.

The idea here is that clicking on a window manager (like OroboROX) in
ROX-Filer will switch to that window manager.

07-May-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

08-Apr-2004
~~~~~~~~~~~
Use a different test for a locally installed ROX-Filer (Taco Buitenhuis).
The previous one didn't work on some systems.

04-Apr-2004
~~~~~~~~~~~
When using Zero Install, get default choices from there so you get default run
actions for archives, text files, web pages, etc.
If the Python D-BUS bindings aren't found, give a more helpful error message.

23-Apr-2004 (Release 0.1.22)
~~~~~~~~~~~
Start ZeroProgress (Zero Install progress monitor) on login, if Zero Install